--- a/src/input.css
+++ b/src/input.css
@@ -37,7 +37,7 @@
 
 
   .ansButton {
-  @apply px-5 py-2 sm:px-5 sm:py-5 bg-blue-900 font-bold rounded-[5px] cursor-pointer text-[15px];
+  @apply px-5 py-2 sm:px-10 sm:py-5 sm:w-[500px] bg-blue-900 font-bold rounded-[5px] cursor-pointer text-[15px];
   @apply hover:bg-blue-200 transition duration-500;
 }
 
