--- a/src/input.css
+++ b/src/input.css
@@ -49,6 +49,11 @@
 .QuizTitleContainer{
   @apply absolute bg-rose-400 top-0 left-0 right-0 h-20 sm:h-30 rounded-tr-2xl rounded-tl-2xl flex flex-row justify-center items-center gap-2;
 }
+
+.ManagerContainer{
+  @apply bg-blue-500 p-4 flex flex-row items-center mx-0.5 gap-2 rounded-2xl font-bold text-[10px] 
+}
+
 }
 
 
