--- a/src/input.css
+++ b/src/input.css
@@ -52,7 +52,8 @@
 
 .ManagerContainer{
   @apply bg-blue-500 p-4 flex flex-row items-center mx-0.5 gap-2 rounded-2xl font-bold text-[10px];
-  @apply sm:text-3xl sm:p-10
+  @apply sm:text-3xl sm:p-10;
+  @apply hover:bg-blue-100 transition duration-300;
 }
 
 }
