--- a/public/styles.css
+++ b/public/styles.css
@@ -328,6 +328,9 @@
   .rounded-2xl {
     border-radius: var(--radius-2xl);
   }
+  .bg-black {
+    background-color: var(--color-black);
+  }
   .bg-blue-300 {
     background-color: var(--color-blue-300);
   }
